fix horizontal scroll?

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,6 +16,7 @@ body {
   overflow-anchor: none;
   transition: ease-in-out;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
